API not yet finish

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -192,6 +192,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-md-6">
+                      <div class="card my-3 shadow">
+                          <img src="" class="card-img-top" alt="API">
+                          <div class="card-body text-center">
+                              <h5 class="card-title">API</h5>
+                              <p class="card-text"> A website that utilizes a free public API with JSON return.</p>
+                              <a class="btn btn-outline-secondary fw-bold rounded-3" href="../A04/index.html">View Project</a>
+                          </div>
+                      </div>
+                  </div>
                 </div>
             </div>
 
