--- a/A04/index.html
+++ b/A04/index.html
@@ -21,7 +21,6 @@
       overflow: hidden;
     }
 
-
     .imgContainer img {
       width: 100%;
       height: 100%;
@@ -55,7 +54,7 @@
 
     const getCharacters = async () => {
       try {
-        const response = await fetch(`http://api.disneyapi.dev/character?page=1&pageSize=85`);
+        const response = await fetch(`https://api.disneyapi.dev/character?page=1&pageSize=85`);
 
         if (!response.ok) {
           throw new Error("Failed to fetch data");
@@ -67,14 +66,14 @@
 
         data.data.forEach(character => {
           var content = `
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-  <div class="card rounded-5 shadow p-4 my-3 d-flex flex-column align-items-center text-center" style="height: 100%;">
-    <div class="imgContainer ">
-      <img src="${character.imageUrl ? character.imageUrl : 'https://via.placeholder.com/130'}" alt="${character.name}">
-    </div>
-    <div class="h5">${character.name}</div>
-  </div>
-</div>
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
+              <div class="card rounded-5 shadow p-4 my-3 d-flex flex-column align-items-center text-center" style="height: 100%;">
+                <div class="imgContainer">
+                  <img src="${character.imageUrl ? character.imageUrl : 'https://via.placeholder.com/130'}" alt="${character.name}">
+                </div>
+                <div class="h5">${character.name}</div>
+              </div>
+            </div>
           `;
 
           container.innerHTML += content;
@@ -83,7 +82,6 @@
         console.error(error);
         errorMessage.style.display = "block";
       }
-
     };
 
     getCharacters();
