--- a/A04/index.html
+++ b/A04/index.html
@@ -4,20 +4,40 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Disney Characters List</title>
+  <title>Disney Characters</title>
+  <link rel="icon" type="image/x-icon" href="https://github.com/iiistell/API/blob/main/disneylogo.png?raw=true" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
+    .bg {
+      background-image: url('https://i.pinimg.com/736x/f6/44/59/f644591196be671f78ddbd12bbeb37c8.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: white;
+      position: relative;
+    }
+
+    .bg::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+    }
+
     .characterButton:hover {
       cursor: pointer;
       box-shadow: 1px 1px 5px 1px;
     }
 
     .imgContainer {
-      background-color: lightgray;
-      border-radius: 10px;
-      width: 250px;
-      height: 250px;
+      border-radius: 20px;
+      width: 200px;
+      height: 200px;
       overflow: hidden;
     }
 
@@ -25,25 +45,105 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 20px;
+      transition: transform 0.6s ease;
     }
+
+    .imgContainer:hover img {
+      transform: scale(1.05);
+    }
+
+    .card {
+      position: relative;
+      z-index: 1;
+      opacity: 0.6;
+    }
+
+    .card:hover {
+      opacity: 0.8;
+    }
+
+    
+    .fade-in-down {
+      opacity: 0;
+      transform: translateY(-20px);
+      animation: fadeInDown 2s forwards;
+    }
+
+    @keyframes fadeInDown {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    footer {
+      background-color: #142d639a;
+      height: max-content;
+      padding: 5px;
+      font-size: 15px;
+      text-align: center;
+      display: block;
+      color: beige;
+    }
+
   </style>
 </head>
 
-<body>
-  <div class="container">
-    <div class="row mt-5">
-      <div class="col">
-        <div class="display-3">Disney Characters List</div>
+<body data-bs-theme="light" id="body">
+
+  <nav id="navbar-example2" class="navbar navbar-expand-lg px-3 mb-5 bg-body-tertiary"
+    style="position: fixed; top: 0; width: 100%; z-index: 1000;">
+    <a class="navbar-brand fw-bold" href="#">Disney Characters</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link fw-bold" href="../myportfolio/index.html">Home</a>
+        </li>
+        <button class="btn btn-outline-secondary  fw-bold" id="btnColor" onclick="changeColorMode()">Dark
+          Mode</button>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="bg">
+    <div class="container p-1 mt-5">
+      <div class="row" id="characterContainer">
       </div>
-    </div>
-    <div class="row" id="characterContainer">
-    </div>
-    <div class="row">
-      <div id="error-message" class="col text-center text-danger mt-3" style="display: none;">
-        Failed to load characters. Please try again later.
+      <div class="row">
+        <div id="error-message" class="col text-center text-danger mt-3" style="display: none;">
+          Failed to load characters. Please try again later.
+        </div>
       </div>
     </div>
   </div>
+
+  <footer>
+    MADE with 💙 BY DISNEY FAN AND CONTRIBUTORS - 2023 <br />
+    <br />
+    DISNEY AND DISNEY CHARACTERS ARE TRADEMARKS OF WALT DISNEY COMPANY
+  </footer>
+
+
+  <script>
+    var colorMode = "light";
+
+    function changeColorMode() {
+      if (colorMode == "light") {
+        document.getElementById("body").setAttribute("data-bs-theme", "dark");
+        document.getElementById("btnColor").innerHTML = "Light Mode";
+        colorMode = "dark";
+      } else {
+        document.getElementById("body").setAttribute("data-bs-theme", "light");
+        document.getElementById("btnColor").innerHTML = "Dark Mode";
+        colorMode = "light";
+      }
+    }
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
@@ -66,18 +166,21 @@
 
         data.data.forEach(character => {
           var content = `
-            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-              <div class="card rounded-5 shadow p-4 my-3 d-flex flex-column align-items-center text-center" style="height: 100%;">
-                <div class="imgContainer">
-                  <img src="${character.imageUrl ? character.imageUrl : 'https://via.placeholder.com/130'}" alt="${character.name}">
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 mb-3 mt-4 fade-in-down">
+              <a href="view.html?characterName=${character.name}" class="w-100 text-decoration-none">
+                <div class="card rounded-5 shadow p-3 my-2 d-flex flex-column align-items-center text-center" 
+                     style="height: 100%; position: relative;">
+                  <div class="imgContainer p-2" style="position: relative; z-index: 1;">
+                    <img src="${character.imageUrl ? character.imageUrl : 'https://i.pinimg.com/736x/de/61/5d/de615d1010040c458ac0d7337298c2ef.jpg'}" alt="${character.name}">
+                  </div>
+                  <div class="h5 mt-2" style="z-index: 1;">${character.name}</div>
                 </div>
-                <div class="h5">${character.name}</div>
-              </div>
+              </a>
             </div>
           `;
-
           container.innerHTML += content;
         });
+
       } catch (error) {
         console.error(error);
         errorMessage.style.display = "block";
