--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -198,10 +198,10 @@
             </div>
             <div class="col-12 col-md-6">
               <div class="card my-3 shadow">
-                <img src="" class="card-img-top" alt="API">
+                <img src="assets/API.jpg" class="card-img-top" alt="API">
                 <div class="card-body text-center">
                   <h5 class="card-title">API</h5>
-                  <p class="card-text"> A website that utilizes a free public API with JSON return.</p>
+                  <p class="card-text"> An API Disney Characters</p>
                   <a class="btn btn-outline-secondary fw-bold rounded-3" href="../A04/index.html">View Project</a>
                 </div>
               </div>
