--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -79,6 +79,17 @@
         </div>
       </div>
       <div class="carousel-item position-relative" style="height: 100%;">
+        <img src="assets/API.jpg" class="d-block w-100 opacity-50" style="height: 100%; object-fit: cover;"
+          alt="...">
+        <div class="bg-dark opacity-50 position-absolute w-100 h-100"></div>
+        <div class="carousel-caption d-flex justify-content-center align-items-center" style="height: 100%;">
+          <div class="text-center text-body">
+            <h1 class="fw-bold">API Disney Character</h1>
+            <p class="fs-4 fst-italic">Explore the Disney Characters!</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item position-relative" style="height: 100%;">
         <img src="assets/Haikyu.jpg" class="d-block w-100 opacity-50" style="height: 100%; object-fit: cover;"
           alt="...">
         <div class="bg-dark opacity-50 position-absolute w-100 h-100"></div>
