Updated the file locator in every page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
                 <h5 class="card-title">Switzerland</h5>
                 <p class="card-text">Experience the beauty of Swiss landscapes</p>
-                <a class="btn btn-outline-secondary fw-bold rounded-3" href="activities/index1.html">View Project</a>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="A02/index.html">View Project</a>
               </div>
             </div>
           </div>
@@ -349,11 +349,8 @@
           <img src="A03/assets/p30.jpg" class="card-img-top shadow-2 rounded-2" style="height: 400px; object-fit: cover;">
         </div>
       </div>
-
     </div>
   </div>
-
-
 
   <footer class="bg-dark text-white text-center shadow">
 
