--- a/MP1/video.html
+++ b/MP1/video.html
@@ -40,7 +40,7 @@
       background-color: white;
       color: black;
       transform: scale(1.05);
-      box-shadow: 0px 4px 10px white ; 
+      box-shadow: 0px 4px 10px #6c757d;
     }
 
     .section-title {
@@ -54,11 +54,21 @@
     section {
       scroll-margin-top: 4rem;
     }
+
+    footer {
+      background-color: #ffffff67;
+      height: max-content;
+      padding: 3px;
+      font-size: 10px;
+      text-align: center;
+      display: block;
+      color: beige;
+    }
   </style>
 </head>
 
 <body data-bs-theme="dark">
-  <nav id="navbar-example2" class="navbar navbar-expand-lg px-3 mb-3 bg-body-tertiary"
+  <nav id="navbar-example2" class="navbar navbar-expand-lg px-3 mb-3 bg-secondary"
     style="position: fixed; top: 0; width: 100%; z-index: 1000;">
     <img src="https://github.com/iiistell/API/blob/main/disneylogo.png?raw=true" style="width:30px; height:30px;">
     <h5 class="p-2 my-auto">Disney</h5>
@@ -92,10 +102,10 @@
   <!-- Upcoming Movies -->
   <section id="upcoming-movies" class="container ">
     <h2 class="section-title">Upcoming Disney Movies</h2>
-    <div class="row justify-content-center g-4 mt-3">
+    <div class="row justify-content-center g-4 mt-2 mb-3">
       <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
         <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
-          <iframe class="card-img-top" width="560" height="315"
+          <iframe class="card-img-top rounded-4" width="560" height="315"
             src="https://www.youtube.com/embed/TbiPcMCz0Ek?si=u4TWDVZKCq4Dacaw" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -107,8 +117,8 @@
         </div>
       </div>
       <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
-        <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
-          <iframe class="card-img-top" width="560" height="315"
+        <div class="card bg-dark text-light rounded-4" style="width: 30rem; position: relative;">
+          <iframe class="card-img-top rounded-4" width="560" height="315"
             src="https://www.youtube.com/embed/gvlMel9ZBdg?si=k4rFyYEQszxZT7I7" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -117,11 +127,63 @@
           <div class="card-body">
             <p class="card-text">Join Elsa and Anna in an epic new adventure in Arendelle.</p>
           </div>
+
+          <!-- Button trigger modal -->
+          <div class="text-center mt-3 mb-3">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Movie Details 
+            </button>
+          </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="container">
+                  <!-- Tags -->
+                  <div class="mb-3">
+                    <span class="badge rounded-pill bg-secondary me-2">Computer Animation</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Adventure</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Animation</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Comedy</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Drama</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Family</span>
+                    <span class="badge rounded-pill bg-secondary me-2">Fantasy</span>
+                    <span class="badge rounded-pill bg-secondary">Musical</span>
+                  </div>
+
+                  <!-- Description -->
+                  <p>Elsa and Anna take Olaf, Kristoff, and Sven for another adventure.</p>
+
+                  <!-- Credits -->
+                  <hr>
+                  <ul class="list-unstyled">
+                    <li><strong>Directors:</strong> <a href="#" class="text-primary text-decoration-none">Jennifer
+                        Lee</a> &middot; <a href="#" class="text-primary text-decoration-none">Marc Smith</a></li>
+                    <li><strong>Writers:</strong> <a href="#" class="text-primary text-decoration-none">Jennifer Lee</a>
+                      &middot; <a href="#" class="text-primary text-decoration-none">Marc Smith</a></li>
+                    <li><strong>Stars:</strong> <a href="#" class="text-primary text-decoration-none">Kristen Bell</a>
+                      &middot; <a href="#" class="text-primary text-decoration-none">Idina Menzel</a> &middot; <a
+                        href="#" class="text-primary text-decoration-none">Jonathan Groff</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
         <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
-          <iframe class="card-img-top" width="560" height="315"
+          <iframe class="card-img-top rounded-4" width="560" height="315"
             src="https://www.youtube.com/embed/hDZ7y8RP5HE?si=RlmYCoO99zGbRDDq" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -133,8 +195,66 @@
           </div>
         </div>
       </div>
+      <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
+        <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
+          <iframe class="card-img-top rounded-4" width="560" height="315"
+            src="https://www.youtube.com/embed/o17MF9vnabg?si=_bGAeH3NoGKsG585" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h5 class="card-title text-center p-3">MUFASA: The Lion King</h5>
+          <div class="card-body">
+            <p class="card-text">Join Mufasa on an inspiring journey as he rises from humble beginnings to become the
+              legendary King of the Pride Lands. Experience his trials, triumphs, and the legacy that shaped the Circle
+              of Life.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
+        <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
+          <iframe class="card-img-top rounded-4" width="560" height="315"
+            src="https://www.youtube.com/embed/8ocanbiSyV4?si=VQTpw2HIxK3nQkIB" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h5 class="card-title text-center p-3">Elio</h5>
+          <div class="card-body">
+            <p class="card-text">
+              Elio, an ordinary kid, is mistaken for Earth’s ambassador to the universe, leading to a fun and
+              heartwarming adventure of self-discovery in a stunning cosmic world.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-md-6 col-sm-12 d-flex justify-content-center">
+        <div class="card bg-dark text-light rounded-4" style="width: 30rem;">
+          <iframe class="card-img-top rounded-4" width="560" height="315"
+            src="https://www.youtube.com/embed/CZC0dP3OWO8?si=ahSYXaIJtvcfyhTe" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h5 class="card-title text-center p-3">How to Train your Dragon Live Action</h5>
+          <div class="card-body">
+            <p class="card-text">Hiccup and Toothless return in a live-action adventure, bringing their epic story of
+              friendship and courage to life like never before!</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+
+      </div>
+    </div>
+  </div>
+
+  <footer class="bg-secondary">
+    <p class="mb-0">© 2024 Disney. All Rights Reserved.</p>
+    <small>Created for entertainment purposes and Disney fans worldwide.</small>
+  </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
