--- a/index.html
+++ b/index.html
@@ -342,13 +342,12 @@
   <div class="d-flex flex-column min-vh-100 mt-5">
     <div class="container-fluid p-5 flex-fill" id="explorenow">
       <div class="row my-3">
-        <!-- Latest Projects Column -->
         <p class="display-3 pt-3 font-monospace fs-4 text-center">My Latest Projects</p>
         <div class="row justify-content-center">
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="col-xl-3 col-md-4 col-sm-6">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Canon.png" class="card-img-top" alt="Switzerland" style="height: 150px; object-fit: cover;">
-              <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">Tri-Fold Brochure</h5>
                 <p class="card-text">A Canon tri-fold A4 brochure that showcases the system's attributes, properties,
                   and characteristics.</p>
@@ -358,20 +357,20 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-            <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
+          <div class="col-xl-3 col-md-4 col-sm-6">
+            <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Switzerland.png" class="card-img-top" alt="Other Project" style="height: 150px; object-fit: cover;">
-              <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">Switzerland</h5>
                 <p class="card-text">Experience the beauty of Swiss landscapes</p>
                 <a class="btn btn-outline-secondary fw-bold rounded-3" href="A02/index.html">View Project</a>
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-            <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
+          <div class="col-xl-3 col-md-4 col-sm-6">
+            <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/MyPortfolio.png" class="card-img-top" alt="Other Project" style="height: 150px; object-fit: cover;">
-              <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">Istel's Portfolio</h5>
                 <p class="card-text">Create your GitHub page. This page will be the home page where your future works
                   will be added.</p>
@@ -379,22 +378,22 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-            <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
+          <div class="col-xl-3 col-md-4 col-sm-6">
+            <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/API.jpg" class="card-img-top" alt="API" style="height: 150px; object-fit: cover;">
-              <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">API</h5>
-                <p class="card-text"> An API Disney Characters</p>
+                <p class="card-text">An API Disney Characters</p>
                 <a class="btn btn-outline-secondary fw-bold rounded-3" href="A04/index.html">View Project</a>
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12">
-            <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
+          <div class="col-xl-3 col-md-4 col-sm-6">
+            <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Video.jpg" class="card-img-top" alt="API" style="height: 150px; object-fit: cover;">
-              <div class="card-body text-center" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">Embed Video</h5>
-                <p class="card-text"> </p>
+                <p class="card-text"></p>
                 <a class="btn btn-outline-secondary fw-bold rounded-3" href="MP1/video.html">View Project</a>
               </div>
             </div>
@@ -403,6 +402,7 @@
       </div>
     </div>
   </div>
+  
   
 
   <footer class="bg-dark text-white text-center shadow">
