Update the Video Embed Project

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
               <img src="A03/assets/Video.jpg" class="card-img-top" alt="API" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h5 class="card-title">Embed Video</h5>
-                <p class="card-text"></p>
+                <p class="card-text">Keep a look out for this movies coming to a cinemas near you.</p>
                 <a class="btn btn-outline-secondary fw-bold rounded-3" href="MP1/video.html">View Project</a>
               </div>
             </div>
