--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         <p class="fs-6 fst-italic text-muted">Bachelor of Science in Information Technology</p>
       </div>
       <div class="col-12 col-md-6 text-start mt-3">
-        <p class="fs-6 lh-lg text-justify text-muted">
+        <p class="fs-6 lh-lg text-center text-muted">
           I am a dedicated fourth-year student pursuing a Bachelor of Science in Information Technology. My academic journey has equipped me with skills in UI/UX design, where I focus on creating user-friendly and visually appealing digital interfaces. Through my studies, I’ve cultivated a passion for designing intuitive experiences that align with user needs, making technology more accessible and engaging.
         </p>
-        <p class="fs-6 lh-lg text-justify text-muted">
+        <p class="fs-6 lh-lg text-center text-muted">
           Beyond academics, I have been passionate about volleyball since childhood. I actively participate in my town's inter-barangay league, which has been an incredible platform for honing my skills while embracing teamwork and sportsmanship. Balancing academics and athletics has been a fulfilling challenge that has enriched my university experience, teaching me valuable lessons in time management, perseverance, and collaboration.
         </p>
 
@@ -344,7 +344,7 @@
       <div class="row my-3">
         <p class="display-3 pt-3 font-monospace fs-4 text-center">My Latest Projects</p>
         <div class="row justify-content-center">
-          <div class="col-xl-3 col-md-4 col-sm-6">
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Canon.png" class="card-img-top" alt="Switzerland" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
@@ -357,7 +357,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6">
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Switzerland.png" class="card-img-top" alt="Other Project" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
@@ -367,7 +367,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6">
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/MyPortfolio.png" class="card-img-top" alt="Other Project" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
@@ -378,7 +378,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6">
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/API.jpg" class="card-img-top" alt="API" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
@@ -388,7 +388,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-4 col-sm-6">
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
               <img src="A03/assets/Video.jpg" class="card-img-top" alt="API" style="height: 150px; object-fit: cover;">
               <div class="card-body text-center d-flex flex-column justify-content-between">
