--- a/index.html
+++ b/index.html
@@ -384,88 +384,79 @@
     </div>
 
     <section style="
-  background: url('img/home.png') no-repeat center center;
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-">
-      <!--Latest Projects-->
-      <div class="d-flex flex-column min-vh-100 mt-5">
-        <div class="container  p-5 flex-fill min-vh-100 mt-5" id="explorenow">
-          <p class="display-3 pt-3 font-monospace fs-4 text-center">My Latest Projects</p>
-          <div class="row my-3">
-            <!-- Latest Projects Column -->
-            <div class="row justify-content-center">
-              <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
-                <div class="card my-3 shadow" style="height: 400px; border-radius: 15px; overflow: hidden;">
-                  <img src="A03/assets/Canon.png" class="card-img-top" alt="Switzerland"
-                    style="height: 150px; object-fit: cover;">
-                  <div class="card-body text-center"
-                    style="display: flex; flex-direction: column; justify-content: space-between;">
-                    <h5 class="card-title">Tri-Fold Brochure</h5>
-                    <p class="card-text">A Canon tri-fold A4 brochure that showcases the system's attributes,
-                      properties,
-                      and characteristics.</p>
-                    <a class="btn btn-outline-secondary fw-bold rounded-3"
-                      href="https://www.canva.com/design/DAGTO1hskmI/G4FQMIHl_LRpPNWeZ_bLAw/edit?utm_content=DAGTO1hskmI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">View
-                      Project</a>
-                  </div>
-                </div>
+    background: url('img/home.png') no-repeat center center;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+  ">
+    <!-- Latest Projects -->
+    <div class="d-flex flex-column min-vh-100 mt-5">
+      <div class="container p-5 flex-fill min-vh-100 mt-5" id="explorenow">
+        <p class="display-3 pt-3 font-monospace fs-4 text-center">My Latest Projects</p>
+        <div class="row my-3 justify-content-center">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/Canon.png" class="card-img-top" alt="Canon Brochure"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">Tri-Fold Brochure</h5>
+                <p class="card-text">A Canon tri-fold A4 brochure that showcases the system's attributes and characteristics.</p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3"
+                  href="https://www.canva.com/design/DAGTO1hskmI/G4FQMIHl_LRpPNWeZ_bLAw/edit?utm_content=DAGTO1hskmI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">View
+                  Project</a>
               </div>
-              <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
-                <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
-                  <img src="A03/assets/Switzerland.png" class="card-img-top" alt="Other Project"
-                    style="height: 150px; object-fit: cover;">
-                  <div class="card-body text-center"
-                    style="display: flex; flex-direction: column; justify-content: space-between;">
-                    <h5 class="card-title">Switzerland</h5>
-                    <p class="card-text">Experience the beauty of Swiss landscapes</p>
-                    <a class="btn btn-outline-secondary fw-bold rounded-3" href="A02/index.html">View Project</a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/Switzerland.png" class="card-img-top" alt="Switzerland"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">Switzerland</h5>
+                <p class="card-text">Experience the beauty of Swiss landscapes.</p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="A02/index.html">View Project</a>
               </div>
-              <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
-                <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
-                  <img src="A03/assets/MyPortfolio.png" class="card-img-top" alt="Other Project"
-                    style="height: 150px; object-fit: cover;">
-                  <div class="card-body text-center"
-                    style="display: flex; flex-direction: column; justify-content: space-between;">
-                    <h5 class="card-title">Istel's Portfolio</h5>
-                    <p class="card-text">Create your GitHub page. This page will be the home page where your future
-                      works
-                      will be added.</p>
-                    <a class="btn btn-outline-secondary fw-bold rounded-3" href="index.html">View Project</a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/MyPortfolio.png" class="card-img-top" alt="Portfolio"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">Istel's Portfolio</h5>
+                <p class="card-text">Create your GitHub page to showcase your future works.</p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="index.html">View Project</a>
               </div>
-              <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
-                <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
-                  <img src="A03/assets/API.jpg" class="card-img-top" alt="API"
-                    style="height: 150px; object-fit: cover;">
-                  <div class="card-body text-center"
-                    style="display: flex; flex-direction: column; justify-content: space-between;">
-                    <h5 class="card-title">API</h5>
-                    <p class="card-text"> An API Disney Characters</p>
-                    <a class="btn btn-outline-secondary fw-bold rounded-3" href="A04/index.html">View Project</a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/API.jpg" class="card-img-top" alt="API"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">API</h5>
+                <p class="card-text">An API featuring Disney Characters.</p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="A04/index.html">View Project</a>
               </div>
-              <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center:">
-                <div class="card my-3 shadow" style="height: 400px;border-radius: 15px; overflow: hidden;">
-                  <img src="A03/assets/Video.jpg" class="card-img-top" alt="API"
-                    style="height: 150px; object-fit: cover;">
-                  <div class="card-body text-center"
-                    style="display: flex; flex-direction: column; justify-content: space-between;">
-                    <h5 class="card-title">Embed Video</h5>
-                    <p class="card-text"> </p>
-                    <a class="btn btn-outline-secondary fw-bold rounded-3" href="MP1/video.html">View Project</a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/Video.jpg" class="card-img-top" alt="Video Embed"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">Embed Video</h5>
+                <p class="card-text">Embed and showcase videos seamlessly.</p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="MP1/video.html">View Project</a>
               </div>
             </div>
           </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
+  
+  
 
     <footer class="bg-dark text-white text-center shadow">
       <div class="text-center p-2">
