--- a/index.html
+++ b/index.html
@@ -451,6 +451,19 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+            <div class="card my-3 shadow" style="height: 400px; width: 100%; border-radius: 15px; overflow: hidden;">
+              <img src="A03/assets/404card.jpg" class="card-img-top" alt="Video Embed"
+                style="height: 150px; object-fit: cover;">
+              <div class="card-body d-flex flex-column text-center justify-content-between">
+                <h5 class="card-title">404 Not Found</h5>
+                <p class="card-text">
+                  Create your Error 404 page on your GitHub website.
+                </p>
+                <a class="btn btn-outline-secondary fw-bold rounded-3" href="404.html">View Project</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
